add pick question to exam feature
